fix score alignment for safari browser

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -103,7 +103,7 @@ html {
   height: 60%;
   display: flex;
   justify-content: center;
-  align-items: baseline;
+  align-items: flex-start;
 }
 
 .con{
